--- a/nodejs/Dockerfile-8-onbuild
+++ b/nodejs/Dockerfile-8-onbuild
@@ -18,7 +18,7 @@ ONBUILD ARG NPMRC=""
 # 2
 # 安装项目依赖包
 ONBUILD COPY package.json /usr/src/app/
-ONBUILD RUN echo -e $NPMRC > .npmrc && yarn install --production && yarn cache clean --force
+ONBUILD RUN echo -e $NPMRC > .npmrc && yarn install --production && yarn cache clean --force && rm -f .npmrc
 # 拷贝当前目录到 /usr/src/app
 ONBUILD COPY . /usr/src/app
 # 容器对外暴露的端口号
