--- a/nodejs/Dockerfile-10-onbuild
+++ b/nodejs/Dockerfile-10-onbuild
@@ -2,6 +2,11 @@
 FROM node:10-alpine
 # # apk 更新国内源
 RUN echo -e "http://mirrors.aliyun.com/alpine/v3.7/main\nhttp://mirrors.aliyun.com/alpine/v3.7/community" > /etc/apk/repositories
+
+# 更新中国时区
+ARG TIME_ZONE='Asia/Shanghai'
+RUN apk update && apk --no-cache add tzdata && cp -R /usr/share/zoneinfo/$TIME_ZONE /etc/localtime && echo $TIME_ZONE > /etc/timezone && apk del tzdata && rm -rf /var/cache/apk/*
+
 # 设置工作目录 /usr/src/app
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
