--- a/nodejs/Dockerfile-10-onbuild
+++ b/nodejs/Dockerfile-10-onbuild
@@ -1,7 +1,7 @@
 # 指定我们的基础镜像是node
-FROM node:10-alpine
+FROM node:10.12-alpine
 # # apk 更新国内源
-RUN echo -e "http://mirrors.aliyun.com/alpine/v3.7/main\nhttp://mirrors.aliyun.com/alpine/v3.7/community" > /etc/apk/repositories
+RUN echo -e "http://mirrors.aliyun.com/alpine/v3.8/main\nhttp://mirrors.aliyun.com/alpine/v3.8/community" > /etc/apk/repositories
 
 # 更新中国时区
 ARG TIME_ZONE='Asia/Shanghai'
@@ -19,11 +19,13 @@ ONBUILD ENV NODE_ENV $NODE_ENV
 ONBUILD ARG PORT=3000
 ONBUILD ENV PORT $PORT
 
+ONBUILD ARG YARN_OR_NPM=yarn
+
 # 2
 # 安装项目依赖包
 ONBUILD COPY package.json /usr/src/app/
 ONBUILD COPY .npmr[c] /usr/src/app/
-ONBUILD RUN yarn install --production && yarn cache clean --force && rm -f .npmrc
+ONBUILD RUN $YARN_OR_NPM install --production && $YARN_OR_NPM cache clean --force && rm -f .npmrc
 # 拷贝当前目录到 /usr/src/app
 ONBUILD COPY . /usr/src/app
 # 容器对外暴露的端口号
