--- a/nodejs/Dockerfile-6-onbuild
+++ b/nodejs/Dockerfile-6-onbuild
@@ -1,5 +1,5 @@
 # 指定我们的基础镜像是node
-FROM node:6-alpine
+FROM node:6.14-alpine
 # # apk 更新国内源
 RUN echo -e "http://mirrors.aliyun.com/alpine/v3.4/main\nhttp://mirrors.aliyun.com/alpine/v3.4/community" > /etc/apk/repositories
 
@@ -19,11 +19,13 @@ ONBUILD ENV NODE_ENV $NODE_ENV
 ONBUILD ARG PORT=3000
 ONBUILD ENV PORT $PORT
 
+ONBUILD ARG YARN_OR_NPM=yarn
+
 # 2
 # 安装项目依赖包
 ONBUILD COPY package.json /usr/src/app/
 ONBUILD COPY .npmr[c] /usr/src/app/
-ONBUILD RUN yarn install --production && yarn cache clean --force && rm -f .npmrc
+ONBUILD RUN $YARN_OR_NPM install --production && $YARN_OR_NPM cache clean --force && rm -f .npmrc
 # 拷贝当前目录到 /usr/src/app
 ONBUILD COPY . /usr/src/app
 # 容器对外暴露的端口号
