--- a/nodejs/Dockerfile-6-onbuild
+++ b/nodejs/Dockerfile-6-onbuild
@@ -1,7 +1,8 @@
 # 指定我们的基础镜像是node
-FROM node:6.14-alpine
+FROM node:6.16-alpine
 # # apk 更新国内源
-RUN echo -e "http://mirrors.aliyun.com/alpine/v3.4/main\nhttp://mirrors.aliyun.com/alpine/v3.4/community" > /etc/apk/repositories
+ARG ALPINE_VERSION='3.8'
+RUN echo -e "http://mirrors.aliyun.com/alpine/v${ALPINE_VERSION}/main\nhttp://mirrors.aliyun.com/alpine/v${ALPINE_VERSION}/community" > /etc/apk/repositories
 
 # 更新中国时区
 ARG TIME_ZONE='Asia/Shanghai'
@@ -12,7 +13,6 @@ RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
 # 配置环境变量
-# 1
 ONBUILD ARG NODE_ENV=production
 ONBUILD ENV NODE_ENV $NODE_ENV
 
@@ -21,15 +21,19 @@ ONBUILD ENV PORT $PORT
 
 ONBUILD ARG YARN_OR_NPM=yarn
 
-# 2
-# 安装项目依赖包
-ONBUILD COPY package.json /usr/src/app/
-ONBUILD COPY .npmr[c] /usr/src/app/
-ONBUILD RUN $YARN_OR_NPM install --production && $YARN_OR_NPM cache clean --force && rm -f .npmrc
-# 拷贝当前目录到 /usr/src/app
-ONBUILD COPY . /usr/src/app
 # 容器对外暴露的端口号
 ONBUILD EXPOSE $PORT
+
+# 安装项目依赖包
+ONBUILD COPY package.json .npmr[c] /usr/src/app/
+ONBUILD RUN $YARN_OR_NPM install --production && $YARN_OR_NPM cache clean --force
+
+# 拷贝当前目录到 /usr/src/app
+ONBUILD COPY . /usr/src/app
+
+# 删除 .npmrc
+ONBUILD RUN if [ -f .npmrc ]; then rm -f .npmrc; fi
+
 
 # 容器启动时执行的命令，类似npm run start
 CMD ["node", "--version"]
