--- a/nodejs/Dockerfile-8-icu-onbuild
+++ b/nodejs/Dockerfile-8-icu-onbuild
@@ -1,23 +1,31 @@
 # 指定我们的基础镜像是node
 FROM node:8.15-alpine
 # # apk 更新国内源
-RUN echo -e "http://mirrors.aliyun.com/alpine/v3.8/main\nhttp://mirrors.aliyun.com/alpine/v3.8/community" > /etc/apk/repositories
+ARG ALPINE_VERSION='3.8'
+RUN echo -e "https://mirrors.aliyun.com/alpine/v${ALPINE_VERSION}/main\nhttps://mirrors.aliyun.com/alpine/v${ALPINE_VERSION}/community" > /etc/apk/repositories && apk update
 
 # 更新中国时区
 ARG TIME_ZONE='Asia/Shanghai'
-RUN apk update && apk --no-cache add tzdata && cp /usr/share/zoneinfo/$TIME_ZONE /etc/localtime && echo $TIME_ZONE > /etc/timezone && apk del tzdata && apk add git && rm -rf /var/cache/apk/*
+RUN apk --no-cache add tzdata && \
+    cp /usr/share/zoneinfo/$TIME_ZONE /etc/localtime && \
+    echo $TIME_ZONE > /etc/timezone && \
+    apk del tzdata
 
 # 设置中文环境
 RUN npm install --unsafe-perm -g full-icu && npm cache clean --force
 ENV NODE_ICU_DATA="/usr/local/lib/node_modules/full-icu"
 
-# 设置工作目录 /usr/src/app
+# node-canvas + 中文字体
+# https://github.com/Automattic/node-canvas/issues/866
+RUN apk add --no-cache --virtual .base-deps wqy-zenhei --update-cache --repository https://mirrors.aliyun.com/alpine/edge/testing && \
+    apk add --no-cache --virtual .build-deps build-base g++ && \
+    apk add --no-cache --virtual .npm-deps cairo-dev jpeg-dev pango-dev giflib-dev
+
+# 设置工作目录
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
-
 # 配置环境变量
-# 1
 ONBUILD ARG NODE_ENV=production
 ONBUILD ENV NODE_ENV $NODE_ENV
 
@@ -26,15 +34,19 @@ ONBUILD ENV PORT $PORT
 
 ONBUILD ARG YARN_OR_NPM=yarn
 
-# 2
-# 安装项目依赖包
-ONBUILD COPY package.json /usr/src/app/
-ONBUILD COPY .npmr[c] /usr/src/app/
-ONBUILD RUN $YARN_OR_NPM install --production && $YARN_OR_NPM cache clean --force && rm -f .npmrc
-# 拷贝当前目录到 /usr/src/app
-ONBUILD COPY . /usr/src/app
 # 容器对外暴露的端口号
 ONBUILD EXPOSE $PORT
+
+# 安装项目依赖包
+ONBUILD COPY package.json .npmr[c] /usr/src/app/
+ONBUILD RUN $YARN_OR_NPM install --production && $YARN_OR_NPM cache clean --force
+
+# 拷贝当前目录到工作目录
+ONBUILD COPY . /usr/src/app
+
+# 删除 .npmrc
+ONBUILD RUN apk del .build-deps && if [ -f .npmrc ]; then rm -f .npmrc; fi
+
 
 # 容器启动时执行的命令，类似npm run start
 CMD ["node", "--version"]
