--- a/nodejs/Dockerfile-canvas-onbuild
+++ b/nodejs/Dockerfile-canvas-onbuild
@@ -13,6 +13,16 @@ RUN apk update && \
     apk del tzdata && \
     rm -rf /var/cache/apk/*
 
+# 设置中文环境
+RUN npm install --unsafe-perm -g full-icu && npm cache clean --force
+ENV NODE_ICU_DATA="/usr/local/lib/node_modules/full-icu"
+
+# node-canvas + 中文字体
+# https://github.com/Automattic/node-canvas/issues/866
+RUN apk add --no-cache --virtual .base-deps wqy-zenhei --update-cache --repository https://mirrors.aliyun.com/alpine/edge/testing && \
+    apk add --no-cache --virtual .build-deps python build-base g++ && \
+    apk add --no-cache --virtual .npm-deps cairo-dev jpeg-dev pango-dev giflib-dev
+
 # 设置工作目录 /usr/src/app
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
@@ -40,6 +50,9 @@ ONBUILD COPY . /usr/src/app
 
 # 删除 .npmrc
 ONBUILD RUN if [ -f .npmrc ]; then rm -f .npmrc; fi
+
+# 删除 node-canvas 依赖
+ONBUILD RUN apk del .build-deps
 
 # 容器启动时执行的命令，类似npm run start
 CMD ["node", "--version"]
