--- a/nodejs/Dockerfile-icu-onbuild
+++ b/nodejs/Dockerfile-icu-onbuild
@@ -1,17 +1,29 @@
 # 指定我们的基础镜像是node
 FROM node:10.15-alpine
-# pk 更新国内源
+
+# apk 更新国内源
 RUN sed -i -e "s/dl-cdn.alpinelinux.org/mirrors.aliyun.com/" -e "s/http:/https:/" /etc/apk/repositories
 
 # 更新中国时区
 ARG TIME_ZONE='Asia/Shanghai'
-RUN apk update && apk --no-cache add tzdata && cp /usr/share/zoneinfo/$TIME_ZONE /etc/localtime && echo $TIME_ZONE > /etc/timezone && apk del tzdata && rm -rf /var/cache/apk/*
+RUN apk update && \
+    apk --no-cache add tzdata && \
+    cp /usr/share/zoneinfo/$TIME_ZONE /etc/localtime && \
+    echo $TIME_ZONE > /etc/timezone && \
+    apk del tzdata && \
+    rm -rf /var/cache/apk/*
+
+# 设置中文环境
+RUN npm install --unsafe-perm -g full-icu && npm cache clean --force
+ENV NODE_ICU_DATA="/usr/local/lib/node_modules/full-icu"
 
 # 设置工作目录 /usr/src/app
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
 # 配置环境变量
+ONBUILD ENV SASS_BINARY_SITE https://npm.taobao.org/mirrors/node-sass/
+
 ONBUILD ARG NODE_ENV=production
 ONBUILD ENV NODE_ENV $NODE_ENV
 
