--- a/nodejs/Dockerfile-8-icu-onbuild
+++ b/nodejs/Dockerfile-8-icu-onbuild
@@ -1,7 +1,7 @@
 # 指定我们的基础镜像是node
 FROM node:8.15-alpine
 # apk 更新国内源
-RUN sed -i -e "s/dl-cdn.alpinelinux.org/mirrors.aliyun.com/" -e "s/http:/https:/" /etc/apk/repositories && echo @edge https://mirrors.aliyun.com/alpine/edge/testing >> /etc/apk/repositories
+RUN sed -i -e "s/dl-cdn.alpinelinux.org/mirrors.aliyun.com/" -e "s/http:/https:/" /etc/apk/repositories
 
 # 更新中国时区
 ARG TIME_ZONE='Asia/Shanghai'
@@ -9,7 +9,11 @@ RUN apk update && \
     apk --no-cache add tzdata && \
     cp /usr/share/zoneinfo/$TIME_ZONE /etc/localtime && \
     echo $TIME_ZONE > /etc/timezone && \
-    apk del tzdata
+    apk del tzdata && \
+    rm -rf /var/cache/apk/*
+
+# 更新 npm国内taobao源
+RUN npm config set registry https://registry.npm.taobao.org
 
 # 设置中文环境
 RUN npm install --unsafe-perm -g full-icu && npm cache clean --force
@@ -45,8 +49,10 @@ ONBUILD RUN $YARN_OR_NPM install --production && $YARN_OR_NPM cache clean --forc
 ONBUILD COPY . /usr/src/app
 
 # 删除 .npmrc
-ONBUILD RUN apk del .build-deps && if [ -f .npmrc ]; then rm -f .npmrc; fi
+ONBUILD RUN if [ -f .npmrc ]; then rm -f .npmrc; fi
 
+# 删除 node-canvas 依赖
+ONBUILD RUN apk del .build-deps
 
 # 容器启动时执行的命令，类似npm run start
 CMD ["node", "--version"]
