--- a/nodejs/Dockerfile-onbuild
+++ b/nodejs/Dockerfile-onbuild
@@ -5,6 +5,7 @@ FROM node:10.15-alpine
 RUN sed -i -e "s/dl-cdn.alpinelinux.org/mirrors.aliyun.com/" -e "s/http:/https:/" /etc/apk/repositories
 
 # 更新中国时区
+# LANG=zh_CN.UTF-8
 ARG TIME_ZONE='Asia/Shanghai'
 RUN apk update && \
     apk add --no-cache tzdata && \
@@ -19,9 +20,6 @@ RUN npm config set registry https://registry.npm.taobao.org
 # 设置工作目录 /usr/src/app
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
-
-# 添加 git
-RUN apk add --no-cache --virtual .base-deps git
 
 # 配置环境变量
 ONBUILD ENV SASS_BINARY_SITE https://npm.taobao.org/mirrors/node-sass/
