--- a/nodejs/Dockerfile-8-icu-onbuild
+++ b/nodejs/Dockerfile-8-icu-onbuild
@@ -13,8 +13,9 @@ RUN apk update && \
     rm -rf /var/cache/apk/*
 
 # 更新 npm国内taobao源
-RUN npm config set registry https://registry.npm.taobao.org
-
+RUN npm config set registry https://registry.npm.taobao.org && \
+    npm config set disturl https://npm.taobao.org/mirrors/node/
+    
 # 设置中文环境
 RUN npm install --unsafe-perm -g full-icu && npm cache clean --force
 ENV NODE_ICU_DATA="/usr/local/lib/node_modules/full-icu"
