--- a/nodejs/Dockerfile-git-onbuild
+++ b/nodejs/Dockerfile-git-onbuild
@@ -14,7 +14,8 @@ RUN apk update && \
     rm -rf /var/cache/apk/*
 
 # 更新 npm国内taobao源
-RUN npm config set registry https://registry.npm.taobao.org
+RUN npm config set registry https://registry.npm.taobao.org && \
+    npm config set disturl https://npm.taobao.org/mirrors/node/
 
 # 设置工作目录 /usr/src/app
 RUN mkdir -p /usr/src/app
