--- a/nodejs/Dockerfile-git-onbuild
+++ b/nodejs/Dockerfile-git-onbuild
@@ -1,21 +1,5 @@
 # 指定我们的基础镜像是node
-FROM node:10.15-alpine
-
-# apk 更新国内源
-RUN sed -i -e "s/dl-cdn.alpinelinux.org/mirrors.aliyun.com/" -e "s/http:/https:/" /etc/apk/repositories
-
-# 更新中国时区
-ARG TIME_ZONE='Asia/Shanghai'
-RUN apk update && \
-    apk add --no-cache tzdata && \
-    cp /usr/share/zoneinfo/$TIME_ZONE /etc/localtime && \
-    echo $TIME_ZONE > /etc/timezone && \
-    apk del tzdata && \
-    rm -rf /var/cache/apk/*
-
-# 更新 npm国内taobao源
-RUN npm config set registry https://registry.npm.taobao.org && \
-    npm config set disturl https://npm.taobao.org/mirrors/node/
+FROM registry.cn-hangzhou.aliyuncs.com/icamdora/nodejs:lts
 
 # 设置工作目录 /usr/src/app
 RUN mkdir -p /usr/src/app
